--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <script src="index.js" type="module">
   </script>
-  <canvas id="canvas" width="1920" height="1080"></canvas>
+  <canvas id="canvas"></canvas>
 </body>
 
 </html>
