--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
       width: 100%;
       height: 100%;
     }
+
+    #slider_x {
+      position: absolute;
+      bottom: 90px;
+      left: 50px;
+    }
+
+    #slider_y {
+      position: absolute;
+      bottom: 70px;
+      left: 50px;
+    }
+
+    #slider_z {
+      position: absolute;
+      bottom: 50px;
+      left: 50px;
+    }
   </style>
 
 </head>
@@ -30,6 +48,9 @@
   <script src="index.js" type="module">
   </script>
   <canvas id="canvas" width="2000" height="2000"></canvas>
+  <input id="slider_x" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
+  <input id="slider_y" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
+  <input id="slider_z" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
 </body>
 
 </html>
