--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       height: 100%;
       margin: 0;
       overflow: hidden;
+      background-color: black;
     }
 
     body {
@@ -19,25 +20,26 @@
     }
 
     canvas {
-      width: 100%;
-      height: 100%;
+      width: 800px;
+      height: 800px;
+      border: 1px white solid;
     }
 
     #slider_x {
       position: absolute;
-      bottom: 90px;
+      bottom: 50px;
       left: 50px;
     }
 
     #slider_y {
       position: absolute;
-      bottom: 70px;
+      bottom: 30px;
       left: 50px;
     }
 
     #slider_z {
       position: absolute;
-      bottom: 50px;
+      bottom: 10px;
       left: 50px;
     }
   </style>
@@ -47,7 +49,7 @@
 <body>
   <script src="index.js" type="module">
   </script>
-  <canvas id="canvas" width="2000" height="2000"></canvas>
+  <canvas id="canvas" width="800" height="800"></canvas>
   <input id="slider_x" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
   <input id="slider_y" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
   <input id="slider_z" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
