remove compile warnings, fix mat vec mulitplication logic used for debugging

--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
       bottom: 10px;
       left: 50px;
     }
+
+    #slider_fov {
+      position: absolute;
+      bottom: 50px;
+      left: 250px;
+    }
+
+    #slider_near {
+      position: absolute;
+      bottom: 30px;
+      left: 250px;
+    }
+
+    #slider_far {
+      position: absolute;
+      bottom: 10px;
+      left: 250px;
+    }
   </style>
 
 </head>
@@ -53,6 +71,9 @@
   <input id="slider_x" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
   <input id="slider_y" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
   <input id="slider_z" type="range" min="0" , max="3.14" step="0.1" name="t" value="0" />
+  <input id="slider_fov" type="range" min="0" , max="3.14" step="0.1" name="t" value="1" />
+  <input id="slider_near" type="range" min="-2" , max="2" step="0.1" name="t" value="1" />
+  <input id="slider_far" type="range" min="-2000" , max="2000" step="0.1" name="t" value="-2000" />
 </body>
 
 </html>
